# obsidian-self-mcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/skills/gen-test/: SKILL.md
docs/superpowers/specs/: 2026-03-29-livesync-compatibility-design.md
src/obsidian_livesync_mcp/: __init__.py  chunking.py  cli.py  config.py  models.py  oauth_callback.py  oauth_provider.py  oauth_store.py  server.py  utils.py
src/obsidian_self_mcp/: cli.py  client.py  config.py  server.py  utils.py
tests/: test_chunking.py  test_client.py  test_config.py  test_oauth_callback.py  test_oauth_config.py  test_oauth_ephemeral.py  test_oauth_provider.py  test_oauth_store.py  test_server.py  test_utils.py
